added user and auth
